added webpack and babel for JS compilation, created mobile menu

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,9 @@
         <img src="assets/images/icons/clear-view-escapes.svg" alt="Clear View Escapes">
       </div>
 
-      <div class="site-header__menu-icon"></div>
+      <div class="site-header__menu-icon">
+        <div class="site--header__menu-icon__middle"></div>
+      </div>
 
       <div class="site-header__menu-content">
         <div class="site-header__btn-container">
@@ -169,5 +171,7 @@
       <p><span class="site-footer__text">Copyright &copy; 2016 Clear View Escapes.<br>All rights reserved.</span><br><a href="#" class="btn btn--orange">Get in Touch</a></p>
     </div>
   </footer>
+
+  <script src="./temp/scripts/App.js"></script>
 </body>
 </html>
